--- a/src/scss/parts/header.scss
+++ b/src/scss/parts/header.scss
@@ -15,6 +15,11 @@ header nav {
   opacity: 0.9;
   padding: 0px 37px;
 
+  /*li {
+    float: right;
+    margin-left: 20px;
+  }*/
+
 }
 
 header nav li {
